docs: establish comprehensive standards for agent design, repository structure, and ecosystem documentation.